<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kieronquinn.app.taptap.preferences.Preference
        android:icon="@drawable/ic_accessibility_cross"
        android:key="accessibility"
        android:title="@string/accessibility_info_off"
        android:summary="@string/accessibility_info_off_desc"/>

    <com.kieronquinn.app.taptap.preferences.Preference
        android:icon="@drawable/ic_warning_round"
        android:key="battery_optimisation"
        app:isPreferenceVisible="false"
        android:title="@string/battery_optimisation"
        android:summary="@string/battery_optimisation_desc"/>

    <com.kieronquinn.app.taptap.preferences.Preference
        android:icon="@drawable/ic_gesture_round"
        android:key="gesture"
        android:title="@string/setting_gesture"
        android:summary="@string/setting_gesture_desc"/>


    <com.kieronquinn.app.taptap.preferences.Preference
        android:icon="@drawable/ic_gates_round"
        android:key="gates"
        android:title="@string/setting_gates"
        android:summary="@string/setting_gates_desc"/>

    <com.kieronquinn.app.taptap.preferences.Preference
        android:icon="@drawable/ic_feedback_round"
        android:key="feedback"
        android:title="@string/setting_feedback"
        android:summary="@string/setting_feedback_desc"/>

</PreferenceScreen>